--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,13 +22,23 @@ on:
 
 jobs:
   build:
-    name: Build (${{ matrix.system }})
+    name: Build (${{ matrix.system }}/${{ matrix.target }})
 
     strategy:
+      fail-fast: false
       matrix:
         include:
           - os: ubuntu-latest
             system: x86_64-linux
+            target: x86_64-unknown-linux-gnu
+
+          - os: ubuntu-latest
+            system: x86_64-linux
+            target: aarch64-unknown-linux-gnu
+
+          - os: ubuntu-latest
+            system: x86_64-linux
+            target: riscv64-unknown-linux-gnu
 
     runs-on: ${{ matrix.os }}
 
@@ -42,9 +52,14 @@ jobs:
         uses: cachix/install-nix-action@v30
 
       - name: Run build
+        env:
+          BASE_ATTRIBUTE: "${{ matrix.target}}-lwjgl"
         run: |
-          nix flake check \
+          nix build \
             --fallback \
             --keep-going \
             --print-build-logs \
-            --show-trace
+            --show-trace \
+            ".#\"$BASE_ATTRIBUTE-3.3.3\"" \
+            ".#\"$BASE_ATTRIBUTE-3.3.4\"" \
+            ".#\"$BASE_ATTRIBUTE-3.3.6\""
