add binary cache

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -64,6 +64,7 @@ jobs:
           BASE_ATTRIBUTE: "${{ matrix.target}}-lwjgl"
         run: |
           nix build \
+            --accept-flake-config \
             --fallback \
             --keep-going \
             --print-build-logs \
