--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -40,9 +40,9 @@ jobs:
             system: x86_64-linux
             target: armv7l-unknown-linux-gnueabihf
 
-          - os: ubuntu-latest
-            system: x86_64-linux
-            target: powerpc64le-unknown-linux-gnu
+          # - os: ubuntu-latest
+          #   system: x86_64-linux
+          #   target: powerpc64le-unknown-linux-gnu
 
           - os: ubuntu-latest
             system: x86_64-linux
